<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark_base_tertiary"
    tools:context=".ui.presentation.activity.secretLocker.SecretLockerActivity">

    <androidx.media3.ui.PlayerView
        android:id="@+id/intro_video"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_dark_base_tertiary"
        app:resize_mode="fill"
        app:surface_type="texture_view"
        app:use_controller="false" />

    <ProgressBar
        android:id="@+id/buffering"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_locker_welcome_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="@color/background_dark_base_tertiary"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_ripple"
            android:contentDescription="@string/back"
            android:padding="@dimen/space_16dp"
            android:src="@drawable/ic_back_white_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_ripple"
            android:padding="@dimen/space_16dp"
            android:src="@drawable/ic_info_icon_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_body_welcome_secret_locker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16dp"
            android:background="@drawable/round_corner_12dp_radius"
            android:backgroundTint="@color/icons_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_back">

            <ImageView
                android:id="@+id/iv_welcome_secret_locker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_16dp"
                android:src="@drawable/secret_locker_welcome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_welcome_secret_locker_title"
                style="@style/TitlesTitle2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16dp"
                android:layout_marginTop="@dimen/space_16dp"
                android:gravity="center"
                android:text="@string/welcome_to_secret_locker_title"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_welcome_secret_locker" />

            <TextView
                android:id="@+id/tv_welcome_secret_locker_body"
                style="@style/BodyCallout6spLineSpacing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16dp"
                android:layout_marginTop="@dimen/space_4dp"
                android:paddingBottom="@dimen/space_16dp"
                android:gravity="center"
                android:text="@string/welcome_secret_locker_body"
                android:textColor="@color/text_disabled"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome_secret_locker_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_encrypt_with_private_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16dp"
            android:layout_marginTop="@dimen/space_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_body_welcome_secret_locker">

            <ImageView
                android:id="@+id/iv_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/encrypt_with_private_key"
                android:src="@drawable/encrypt_with_private_key"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/BodyBody3spLineSpacing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_12dp"
                android:text="@string/encrypt_with_private_key"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_key"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_store_in_local_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16dp"
            android:layout_marginTop="@dimen/space_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_encrypt_with_private_key">

            <ImageView
                android:id="@+id/iv_only_to_you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/records_accessible_only_to_you"
                android:src="@drawable/accessible_only_to_you"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/BodyBody3spLineSpacing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_12dp"
                android:text="@string/records_accessible_only_to_you"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_only_to_you"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_no_trace_on_our_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16dp"
            android:layout_marginTop="@dimen/space_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_store_in_local_device">

            <ImageView
                android:id="@+id/iv_no_trace_on_server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/leave_no_trace_on_our_servers"
                android:src="@drawable/leave_no_trace_on_server"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/BodyBody3spLineSpacing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/leave_no_trace_on_our_servers"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_no_trace_on_server"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_generate_key"
            style="@style/LinkAction1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/color_highlight_eka_button_bg_selector"
            android:paddingHorizontal="64dp"
            android:paddingVertical="14dp"
            android:text="@string/generate_key"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.compose.ui.platform.ComposeView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/composeViewEkaPassCrossSell"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>